--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -35,6 +35,7 @@
     "jsx-a11y/accessible-emoji": 0,
     "jsx-a11y/no-autofocus": 0,
     "react/jsx-one-expression-per-line": 0,
+    "react/jsx-indent" : [1],
     "no-debugger": 1,
     "no-var": 1,
     "semi": [1, "always"],
