--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.9.3",
     "eslint": "^6.7.0",
     "fetch": "^1.1.0",
+    "node-fetch": "^2.6.1",
+    "node-sass": "4.14.1",
     "query-string": "^6.9.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "latest"
+    "react-scripts": "3.4.4",
+    "sass-loader": "^12.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
