--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.8.3",
     "node-fetch": "^2.6.0",
     "node-sass": "^6.0.1",
     "passport": "^0.4.1",
     "passport-reddit": "^0.2.4",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
     "snoowrap": "^1.20.1"
   },
   "devDependencies": {
